https://online.sbis.ru/opendoc.html?guid=297ff169-9d2e-4f75-b944-9d119bb6ab44&des= Ошибка в разработку 17.07.2017 Салон. Не полностью окрашена точка в переключателе онлайн- записи при теме Дневная Средняя Как пов…

--- a/components/SwitcherDouble/SwitcherDouble.less
+++ b/components/SwitcherDouble/SwitcherDouble.less
@@ -4,7 +4,7 @@
 
    .controls-SwitcherDouble__toggle {
       display: inline-block;
-      cursor: @switcher-cursor;
+      cursor: @default-hover-cursor;
       width: @switcher-do-horizontal-toggle-width;
       height: @switcher-do-horizontal-toggle-height;
       margin: @switcher-do-horizontal-toggle-margin;
@@ -73,7 +73,7 @@
       .controls-SwitcherDouble__toggle {
          display: inline-block;
          vertical-align: top;
-         cursor: @switcher-cursor;
+         cursor: @default-hover-cursor;
          width: @switcher-do-vertical-toggle-width;
          height: @switcher-do-vertical-toggle-height;
          margin: @switcher-do-vertical-toggle-margin;
