--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -521,18 +521,20 @@
 
 @switcher-width:                                90px;
 @switcher-height:                               45px;
-@switcher-line-height:                          40px;
-@switcher-line-width:                           60px;
-@switcher-line-color-disabled:                  @gray-color;
-@switcher-btn-margin:                           8px;
-@switcher-btn-radius:                           10px;
+@switcherline-height:                           2px;
+@switcherline-width:                            60px;
 @switcher-btn-size:                             22px;
+@switcher-disabled-color:                       @gray-color;
 
-@switcher-btn-color-disabled:                   @switcher-do-disabled-line-color;
 
 @switcher-dot-height:                           8px;
 @switcher-dot-margin:                           5px 0 0 8px;
 @switcher-dot-margin-hover:                     4px 0 0 7px;
+
+@switcher-btn-color-disabled:                   @switcher-do-disabled-line-color;
+@switcher-line-color-disabled:                  @gray-color;
+@switcher-btn-margin:                           8px;
+@switcher-btn-radius:                           10px;
 
 @swithcer-do-font-weight:                       bold;
 @switcher-do-vertical-toggle-width:             40px;
