--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -77,6 +77,9 @@
 @switcher-do-disabled-btn-background:     @gray-ccc-color;
 @switcher-do-horizontal-line-background-color:@innacent-color;
 @switcher-do-disabled-line-color:         @gray-ccc-color;
+
+@switcher-border-color:                   #E4E4E4;
+@switcher-disabled-color:                 @disabled-color;
 // Menu
 @menu-header-caption-color:               #000;
 @popup-header-caption-color:              #fff;
