DateRangeSlider: Поправил новые темы
https://online.sbis.ru/opendoc.html?guid=30b16ba6-5245-4400-8cd6-81a75cd5b75c&des=
Ошибка в разработку 20.07.2017 Platforma_3.17.10_regression_test_presto_CONTROLS - Поехал текст в DateRange …

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -209,7 +209,7 @@
             border: none;
             float: left;
             width: 16.6666%;
-            font-size: 15px;
+            font-size: @date-range-big-choose-years-range-font-size;
             text-align: center;
             background-color: transparent;
 
