--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1562,6 +1562,7 @@
 @date-range-big-choose-years-panel-current-year-button-line-height:         24px;
 @date-range-big-choose-years-panel-back-button-font-size:                   @date-range-big-choose-years-panel-wrapper-font-size;
 @date-range-big-choose-years-panel-back-button-line-height:                 22px;
+@date-range-big-choose-years-range-font-size:                  15px;
 
 @date-range-big-choose-body-height:                                  403px;
 @date-range-big-choose-months-color:                                 @darkcyan-color;
