--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -538,6 +538,7 @@
 @date-range-big-choose-years-panel-current-year-button-line-height:3rem;
 @date-range-big-choose-years-panel-back-button-font-size:3rem;
 @date-range-big-choose-years-panel-back-button-line-height:3rem;
+@date-range-big-choose-years-range-font-size:                  1rem;
 @date-range-big-choose-body-height:       21.429rem;
 @date-range-big-choose-months-range-btn-height:                5.107rem;
 @date-range-big-choose-month-range-picker-month-width:         6.07rem;
