--- a/components/ListView/ListView.tmpl
+++ b/components/ListView/ListView.tmpl
@@ -1,5 +1,5 @@
 <div class="controls-ListView {{multiselect !== false ? 'controls-ListView__multiselect' : 'controls-ListView__multiselect__off'}}{{ _serverRender ? ' controls-ListView__dataLoaded'}}">
-    <div class="controls-ListView__fakeFocusElement" tabindex="-1"></div>
+    <ws:SBIS3.CONTROLS.Panel tabindex="{{1}}" class="controls-ListView__fakeFocusElement"/>
     <div class="controls-AjaxLoader ws-hidden">
         <div class="controls-AjaxLoader__outer">
             <div class="controls-AjaxLoader__block">
