--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -630,6 +630,9 @@
 // ---------------------- //
 // Double online switcher //
 // ---------------------- //
+@switcher-do-text-margin:                       6px;
+@switcher-do-text-selected-cursor:              text;
+@switcher-do-text-unselected-decoration:        underline;
 
 @switcher-do-margin:                            0 0 0 8px;
 
