--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -236,8 +236,11 @@
 @switcher-btn-border-width:                     0.107rem;
 @switcher-btn-hover-border-width:               @switcher-btn-border-width;
 @switcher-dot-size:                             @switcher-btn-size;
-@switcher-border-color:                         #2C4458;
+@switcher-border-color:                         #37536C;
 @switcher-disabled-color:                       #37536C;
+
+//SwitcherDouble
+@switcher-do-text-margin:                       0.571rem;
 //Menu
 @popup-font-size:                         1.43rem; // откатил размер из-за того, что меню стало меньше чем кнпока т.к. в самих кнопках размер шрифта используется больший
 @menu-header-bg-color:                    #23b8ff;
