--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2432,7 +2432,13 @@
 @controls-InformationPopup-border-bottom:                     none;
 @controls-InformationPopup-border-left:                       none;
 @controls-InformationPopup-border-right:                      none;
-@controls-InformationPopup-closeButton-top:                   8px;
+@controls-InformationPopup-closeButton-top:                   5px;
+@controls-InformationPopup-closeButton-right:                 5px;
+@controls-InformationPopup-closeButton-width:                 24px;
+@controls-InformationPopup-closeButton-height:                24px;
+@controls-InformationPopup-closeButton-font-size:             24px;
+@controls-InformationPopup-closeButton-color:                 #CCCCCC;
+@controls-InformationPopup-closeButton-hover-color:           @icon-active-color;
 
 //NotificationPopup
 @controls-NotificationPopup-border:                                          @float-area-border;
@@ -2441,7 +2447,7 @@
 @controls-NotificationPopup-border-right:                                    @controls-NotificationPopup-border;
 @controls-NotificationPopup-border-bottom:                                   @controls-NotificationPopup-border;
 @controls-NotificationPopup-header-padding:                                  8px;
-@controls-NotificationPopup-header-padding-with-close-button:                8px 44px 8px 8px;
+@controls-NotificationPopup-header-padding-with-close-button:                6px 41px 8px 8px;
 
 @controls-NotificationPopup-header-caption-margin-right:                     12px;
 @controls-NotificationPopup-header-caption-font-size:                        15px;
