https://online.sbis.ru/opendoc.html?guid=cc1e8d19-1186-4abe-bbf7-0828dd15309b&des= Ошибка в разработку 21.07.2017 Текст во всех сообщениях об ошибках и предупреждениях в новом дизайне на онлайне совершенно нечитаем…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -795,7 +795,7 @@
 @controls-SubmitPopup-message-font-weight:normal;
 @controls-SubmitPopup-message-font-size:  1.14285rem;
 @controls-SubmitPopup-message-margin-bottom:.5714rem;
-@controls-SubmitPopup-details-color:      @disabled-color;
+@controls-SubmitPopup-details-color:      #8991A9;
 @controls-SubmitPopup-details-font-size:  1rem;
 @controls-SubmitPopup-body-padding:       1.6071rem;
 @controls-SubmitPopup-border-top:         none;
