https://online.sbis.ru/opendoc.html?guid=ff3813c2-e12f-4bc1-b135-57ec75bde437&des= Ошибка в разработку 18.07.2017 Редизайн. Розница Онлайн. Нет отступа сверху у кнопок пэйджинга в разделе Смены и в карточке сменыon…

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -176,7 +176,7 @@
 
 .controls-ListView__scrollPager{
    position: fixed;
-   bottom: 0;
+   bottom: @scrollpager-bottom;
    height: 32px;
    background: @scrollpager-bg;
    border-top: @scrollpager-border;
