--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2653,6 +2653,7 @@
 
 @paging-font-size:                                      18px;
 @scrollpager-bg:                                         white;
+@scrollpager-bottom:                                     0px;
 @scrollpager-border:                                     1px solid @default-color;
 @date-range-big-header-bg:								#f9f9f9;
 @date-range-big-bg:										#fff;
