--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -589,7 +589,7 @@
 @controls-AjaxLoader-block-width:         3.5714rem;
 @controls-AjaxLoader-outer-height:        3.5714rem;
 @controls-AjaxLoader-background:          none;
-@scrollPaging-padding:                    3.3333rem;
+@scrollPaging-padding:                    3.6666rem;
 //Tree view
 @tree-view-expand-spritesheet:            '';
 @tree-view-expand-width:                  1.7857rem;
@@ -872,6 +872,7 @@
 @paging-font-size:                        3rem;
 @scrollpager-bg:                          transparent;
 @scrollpager-border:                      none;
+@scrollpager-bottom:                      .3333rem;
 @closeBigButtonWidth:                     3rem;
 @menu-header-bg-color:                    #23b8ff;
 @date-range-big-header-bg:                #2c3e50;
