--- a/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
+++ b/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
@@ -29,7 +29,7 @@
       </tbody>
       <ws:partial template="{{_footTpl}}" scope="{{...}}" />
    </table>
-   <div class="controls-ListView__EmptyData {{(!_serverRender || _records.length || !emptyHTML) ? 'ws-hidden' : ''}}">
+   <div class="controls-ListView__EmptyData {{(!_serverRender || _records.length || !emptyHTML || _hideEmpty) ? 'ws-hidden' : ''}}">
       <ws:partial template="{{ emptyHTML }}"/>
    </div>
    <ws:if data="{{ footerTpl }}">
