--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -119,6 +119,7 @@
 .controls-LongOperationsPopup__header_downloadButton {
     max-width: 150px;
     margin-left: 8px;
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
