Добавил поддержку tooltip. https://online.sbis.ru/opendoc.html?guid=a29a91a1-6350-4f6f-97c4-8c61b53df422&des= Ошибка в разработку 22.07.2017 У компонента SBIS3.CONTROLS.Label не работает опция tooltip. Она устанавливается, если проверить, он…

--- a/components/ScrollContainer/ScrollContainer.less
+++ b/components/ScrollContainer/ScrollContainer.less
@@ -23,6 +23,7 @@
       background: linear-gradient(to bottom, @controls-ScrollContainer-gradient-background);
    }
    &.controls-ScrollContainer__bottom-gradient:after {
+      display: none;
       bottom: 0;
       background: linear-gradient(to top, @controls-ScrollContainer-gradient-background);
    }
