--- a/components/Label/Label.tmpl
+++ b/components/Label/Label.tmpl
@@ -1,6 +1,5 @@
 <div
    class="controls-Label controls-Label__text controls-Label__text_color controls-Label__text_size"
+   title="{{tooltip}}"
    event:onclick="_clickCaptionHandler()"
->
-   {{caption|sanitize}}
-</div>
+>{{caption|sanitize}}</div>
