Размер иконки по стандарту
https://online.sbis.ru/opendoc.html?guid=eab135a9-364d-4456-9c59-deb0112d5474&des=
Ошибка в разработку 12.07.2017 Размер кнопки "Сохранить в выпадающих списках" в быстром фильтре не соответствует стандарту: 1. pre-…

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2173,7 +2173,10 @@
 @DropdownList-footer-hasMore-top-multiselect:         4px;
 @DropdownList-footer-hasMore-top:                     0;
 @DropdownList-footer-select-right:                    6px;
-@DropdownList-footer-select-top:                      @DropdownList-footer-select-right;
+@DropdownList-footer-select-top:                      2px;
+@DropdownList-footer-select-icon-container-size:      28px!important;
+@DropdownList-footer-select-icon-size:                26px!important;
+
 
 @DropdownList-icon-spritesheet:                       'img/CheckBox.png';
 @DropdownList-icon-bg-pathFilter:                     url(@DropdownList-icon-spritesheet) 0 1px;
