--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -353,6 +353,15 @@
       .controls-DropdownListFooter_select {
          right: @DropdownList-footer-select-right;
          top: @DropdownList-footer-select-top;
+         &.controls-IconButton.controls-IconButton__round-border-24 {
+            height: @DropdownList-footer-select-icon-container-size;
+            width: @DropdownList-footer-select-icon-container-size;
+            .controls-Button__icon {
+               height: @DropdownList-footer-select-icon-size;
+               width: @DropdownList-footer-select-icon-size;
+               line-height: @DropdownList-footer-select-icon-size;
+            }
+         }
       }
    }
    .controls-DropdownList__multiselect {
