LongOperations: Изменён стиль отображения процентов

--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -225,7 +225,10 @@
 }
 
 .controls-LongOperationsPopup__footer_progress {
+    display: inline-block;
+    width: 30px;
     margin-left: 5px;
+    text-align: right;
 }
 
 .controls-LongOperationsPopup__footer__actionsContainer {
