https://online.sbis.ru/opendoc.html?guid=bc079e33-7091-42c3-ae72-549de7a290b6&des= Ошибка в разработку 21.07.2017 iPad. Бизнес / Производство - в акте выпуска хлебные крошки отображаются не ровно (см. скрин) Как по…

--- a/components/BackButton/BackButton.less
+++ b/components/BackButton/BackButton.less
@@ -95,7 +95,7 @@
       }
    }
 
-   &.controls-BackButton__alignment {
+   body:not(.ws-is-mobile-platform) &.controls-BackButton__alignment {
       vertical-align: top;
    }
 
