https://online.sbis.ru/opendoc.html?guid=689e83f8-f805-4256-90b8-f79019900b31&des= Ошибка в разработку 18.07.2017 Реестр документов Продажи - при маленьком разрешении не видно всех массовых команд. Согласно стандар…

--- a/components/OperationsPanel/OperationsPanel.less
+++ b/components/OperationsPanel/OperationsPanel.less
@@ -55,6 +55,15 @@
    .controls-IconButton {
       display: inline-flex;
    }
+
+   &.controls-operationsPanel__mode-withoutCaptions {
+      .controls-operationsPanel__action-withoutCaption {
+         .controls-Link__field {
+            display: none;
+         }
+      }
+
+   }
 }
 
 .controls-operationsPanel__itemsMenu_picker .controls-PopupMixin__closeButton,
