DateRangeSlider: Поправил цвета иконок в темах розницы и престо
https://online.sbis.ru/opendoc.html?guid=93fbd1c2-2114-4273-9b31-f4228821fd66&des=
Ошибка в разработку 17.07.2017 Редизайн. Темная тема. pre-test-online.sbis.ru 3.17.20 - 136 Окно быстрого выбора периода не соответ…

--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -114,6 +114,10 @@ body {
    .controls-DateRangeBigChoose .controls-DateRangeBigChoose__months .controls-DateRangeBigChoose__months-halfyearRange .controls-DateRangeBigChoose__months-range-btn-wrapper.controls-DateRangeBigChoose__months-range-btn-wrapper1 {
        height: 11rem;
    }
+   // См. такой же хак в теме престо. Исправляем цвет после того как переобределили его в теме престо.
+   .controls-DateRangeChoose__home .icon-primary {
+      color: @icon-color-primary;
+   }
 }
 
 body .ws-window {
