--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -293,6 +293,13 @@ body {
          }
       }
    }
+   // У кнопок нестандартный цвет, перебиваем его. В новом дизайне либо добьюсь что бы цвета были стандартные,
+   // либо буду устанавливать его через переменные.
+   // В теме розницы есть такой же хак перебивающий этот хак на стандартный цвет
+   .controls-DateRangeChoose__home .icon-primary {
+      color: #e4e4e4;
+   }
+
   .controls-ToolBar__menuIcon .icon-24 {
     font-family: carrypresto-icons!important;
   }
