--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -476,6 +476,7 @@
 @date-range-choose-years-only-bg-color:   @basic-block-bg-color;
 @date-range-choose-bg-color:              @basic-block-bg-color;
 @date-range-choose-color:                 @default-text-color;
+@date-range-choose-hover-color:           @button-icon-color-hover;
 @date-range-choose-current-value-color:   #fff;
 @date-range-choose-current-value-bg-color:#26b8ff;
 @date-range-choose-current-value-font-size:1.14rem;
