--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -118,6 +118,7 @@
 
 .controls-LongOperationsPopup__header_downloadButton {
     max-width: 150px;
+    min-width: 48px;
     margin-left: 8px;
     overflow: hidden;
     text-overflow: ellipsis;
