https://online.sbis.ru/opendoc.html?guid=bfce1940-859f-4153-9ff3-fa8ad31efbbb&des= Ошибка в разработку 24.07.2017 Редизайн. Розница онлайн. Кнопка-ссылка "По умолчанию" в фильтре по сменам не соответствует специфик…

--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.less
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.less
@@ -193,7 +193,7 @@
 				&.controls-Link {
 					&.ws-enabled {
 						&:hover {
-							color: @darkcyan-color;
+							color: @link-text-color;
 						}
 					}
 				}
