--- a/components/FieldLink/afterFieldWrapper.tmpl
+++ b/components/FieldLink/afterFieldWrapper.tmpl
@@ -21,7 +21,7 @@
     <ws:SBIS3.CONTROLS.IconButton
         name="fieldLinkMenu"
         cssClassName="controls-FieldLink__showSelector"
-        icon="icon-16 icon-size icon-ListView icon-primary action-hover"
+        icon="icon-16 icon-size icon-ListView"
         tabindex="0"
         command="showSelector"
     />
