--- a/components/RadioButton/RadioButton.less
+++ b/components/RadioButton/RadioButton.less
@@ -15,6 +15,8 @@
 
    .controls-RadioButton__icon {
       display: inline-block;
+      float: left;
+      line-height: @radio-button-icon-line-height;
       width: @radio-button-icon-width;
       height: @radio-button-icon-height;
       background: @radio-button-icon-bg;
