https://online.sbis.ru/opendoc.html?guid=a11aedc4-9ac3-4c3d-bed8-fd4284121fff&des= Ошибка в разработку 24.07.2017 Редизайн. Розница онлайн. неверный цвет кнопки закрытия подсказки по ховеру online-inside_3.17.20 (v…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -925,7 +925,7 @@ body {
          color: @link-text-color!important;
          overflow: hidden;
          &:hover {
-            color: #B9E9FF!important;
+            color: @link-hover-text-color!important;
          }
          &:before {
             line-height: 2.7rem!important;
