https://online.sbis.ru/opendoc.html?guid=ea7bcfb8-5e14-4420-a767-dd57f14884ed&des= Ошибка в разработку 24.07.2017 Редизайн. Розница Онлайн. Firefox. Кнопки удаления быстрого фильтра не выровнены относительно средне…

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -433,7 +433,7 @@
       }
    }
    .controls-DropdownList__afterCaptionWrapper {
-      top: 3px;
+      top: @DropdownList-after-caption-top;
    }
 }
 
