--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -2,7 +2,8 @@
 .controls-ListView {
     position: relative;
 
-   &:not(.controls-ListView__dataLoaded) {
+   // Нельзя устанавливать минимальную высоту для копии таблицы которая используется для фиксации заголовков
+   &:not(.controls-ListView__dataLoaded):not(.ws-sticky-header__table-header-copy) {
       min-height: @list-view-min-height;
    }
 
@@ -67,13 +68,6 @@
       .controls-ListView__itemCheckBox {
          cursor: @list-view-disabled-cursor;
       }
-   }
-}
-// Убираем минимальную высоту установленную выше для таблиц вложенных в контейнер фиксированных заголовков.
-.ws-sticky-header__header-container > .controls-ListView {
-   &:not(.controls-ListView__dataLoaded),
-   &.controls-ListView__indicatorVisible {
-      min-height: initial;
    }
 }
 
