https://online.sbis.ru/opendoc.html?guid=0bdeb8fb-dc3f-4f04-bbbf-464532e901a3&des= Ошибка в разработку 20.07.2017 pre-test-online.sbis.ru 3.17.20 - 178 Редизайн Акцентный цвет в текста "Возврат по чеку" не соответс…

--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -27,7 +27,7 @@ body {
    }
     //Todo: https://online.sbis.ru/opendoc.html?guid=47bdafa8-88ab-4cb2-9383-89ffd7c9dcdd
     .controls-accent-text {
-      color: #D94700;
+      color: #D94700 !important;
     }
 }
 
