--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -10,7 +10,7 @@ body {
     //Todo: сделать @accent-color - #FFCC99  https://online.sbis.ru/opendoc.html?guid=47bdafa8-88ab-4cb2-9383-89ffd7c9dcdd
     //сейчас пока сделаем так, чтобы не разломать версию 3.7.5.150
     .controls-accent-text {
-    	color: #FFCC99;
+    	color: #FFCC99 !important;
     }
    // т.к. в редизайне используется одна кнопка без заголовка, то напишем для неё фикс выравнивания
    // в онлайне такие кнопки завязаны на жесткие стили controls-IconButton__round-border-24, что неправильно
