https://online.sbis.ru/debug/opendoc.html?guid=1bebff1f-8a1c-472c-b769-ddc58b58d435&des= Ошибка в разработку 21.07.2017 Пропала оранжевая обводка у кнопки переключения страницы в Престо. Перейти по ссылке: Перейти в разд…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -41,7 +41,7 @@ body {
             }
          }
          &.ws-paging-current{
-            border: @default-border-width @primary-color !important;
+            border: @default-border-width solid @primary-color !important;
             background:#354B62 !important;
             color: #E4E4E4 !important;
          }
