--- a/components/Pager/Pager.less
+++ b/components/Pager/Pager.less
@@ -23,7 +23,7 @@
    .controls-Pager-block-paging{
       padding: 4px 0 0 6px;
    }
-   .controls-Pager__pageSize-container select, .controls-Pager__pageSize-container .controls-DropdownList__text{
+   .controls-Pager__pageSize-container select, .controls-Pager__pageSize-container .controls-DropdownList__text .controls-DropdownList__value{
       font-size: 11px;
    }
    .controls-Pager__pageSize-container {
