https://online.sbis.ru/opendoc.html?guid=f1eae43a-65d9-40f0-a37b-e0163d412785&des= Ошибка в разработку 24.07.2017 Редизайн. Автодополнение в продаже не соответствует спецификации Ожидаемый рез-т: 1. В светлой тем…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -383,7 +383,8 @@
 @text-area-right-padding:                 @text-area-left-padding;
 @text-area-bottom-padding:                @text-area-top-padding;
 // Suggest
-@suggest-picker-border:                   @default-border-width solid @gray-color;
+@suggest-picker-border:                   @default-border-width solid @default-border-color;
+@suggest-picker-color:                    #273B4D;
 @suggest-picker-margin:                   -@default-border-width 0 0 0;
 
 @suggest-list-footer-height:              3.143rem;
