--- a/components/Suggest/Suggest.less
+++ b/components/Suggest/Suggest.less
@@ -15,6 +15,7 @@
   }
 }
 .controls-Suggest__picker {
+  color: @suggest-picker-color;
   width: @suggest-picker-standard-width;
   border: @suggest-picker-border;
   margin: @suggest-picker-margin;
