--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -293,3 +293,7 @@
 // --------------- //
 @controls-MergeDialogTemplate-BreadCrumbs-main-title-color:    #313E78;
 @controls-MergeDialogTemplate-DataGridView-td-border-bottom:   1px solid @gray-light-color !important;
+
+
+// SUGGEST //
+@suggest-picker-color:                    #000000
