--- a/components/WSControls/Lists/ListView2.tmpl
+++ b/components/WSControls/Lists/ListView2.tmpl
@@ -1,5 +1,5 @@
 <div class="controls-ListView {{multiselect !== false ? 'controls-ListView__multiselect' : 'controls-ListView__multiselect__off'}}{{ _serverRender ? ' controls-ListView__dataLoaded'}}"
-     event:onclick="onClick()"
+     event:onclick="_onClickFn()"
      event:onmouseleave="mouseLeave()"
      event:onmousemove="mouseMove()">
    <div class="controls-ListView__itemsContainer">
