https://online.sbis.ru/debug/opendoc.html?guid=23dd93f2-f3a2-49bd-9398-567eb69d1585&des= Ошибка в разработку 18.07.2017 Редактор. Затупы при перетаскивании этапа …

--- a/components/ListView/ListView.less
+++ b/components/ListView/ListView.less
@@ -242,6 +242,8 @@
    height: @controls-AjaxLoader-indicator-height;
 }
 
+//region dragndrop
+
 .controls-DragNDrop__draggedItem {
   position: absolute;
   width: @drag-and-drop-object-width;
@@ -260,42 +262,45 @@
   font-family: @default-font-name;
   font-size: 10px;
 }
-
-
-.controls-ListView {
-   .controls-DragNDrop__placeholder {
-      opacity: 0.35;
-      background-color: @default-itemHover-color;
-   }
-   .controls-DragNDrop__hierarchy_move {
-      outline: @drag-and-drop-border;
-   }
-}
-
-
-.controls-ListView__verticalDragNDrop {
-   .controls-DragNDrop__insertBefore {
-      &, > td {
-         border-top: @drag-and-drop-border;
+.controls-dragndrop {
+   .controls-ListView {
+      .controls-DragNDrop__placeholder {
+         opacity: 0.35;
+         background-color: @default-itemHover-color;
+      }
+      .controls-DragNDrop__hierarchy_move {
+         outline: @drag-and-drop-border;
       }
    }
-   .controls-DragNDrop__insertAfter {
-      &, > td {
-         border-bottom: @drag-and-drop-border;
+
+   .controls-ListView__verticalDragNDrop {
+      .controls-DragNDrop__insertBefore {
+         &, > td {
+            border-top: @drag-and-drop-border;
+         }
+      }
+      .controls-DragNDrop__insertAfter {
+         &, > td {
+            border-bottom: @drag-and-drop-border;
+         }
       }
    }
+
+
+   .controls-ListView__horisontalDragNDrop {
+     .controls-DragNDrop__insertBefore{
+        border-left: @drag-and-drop-border;
+     }
+     .controls-DragNDrop__insertAfter {
+        border-right: @drag-and-drop-border;
+     }
+   }
+
+   .controls-ItemsToolbar {
+     display: none !important;
+   }
 }
-.controls-ListView__horisontalDragNDrop {
-  .controls-DragNDrop__insertBefore{
-     border-left: @drag-and-drop-border;
-  }
-  .controls-DragNDrop__insertAfter {
-     border-right: @drag-and-drop-border;
-  }
-}
-.controls-ItemsToolbar {
-  display: none !important;
-}
+//endregion dragndrop
 
 .controls-ListView__results{
   background: #FFF;
