https://online.sbis.ru/opendoc.html?guid=8f84ff12-8bcf-4bfd-a5c9-f4817c6a9891&des= Ошибка в разработку 21.07.2017 Редизайн. Интерфейсные замечания по чеку коррекции Светлая тема - В чеке коррекции выбрать НДС 10…

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -108,6 +108,8 @@
 @combo-box-arrowDown-color-focus:         @button-icon-color-hover;
 @combo-box-arrowDown-color-picker-show:   @button-icon-color-hover;
 @combo-box-arrowDown-color-hover:         @button-icon-color-hover;
+@combo-box-picker-item-text-color:        #000;
+@combo-box-picker-item-hover-text-color:  #000;
 // Calendar
 @calendar-bg:                             darken(@secondary-color, 5%);
 //FieldLink
