--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -363,8 +363,8 @@
 @combo-box-picker-item-padding:           1.14rem 0.57rem 1.14rem 0.57rem;
 @text-box-field-font-size:                1.43rem;
 @combo-box-picker-item-bg:                #f0f5fb;
-@combo-box-picker-item-text-color:        #324352;
-@combo-box-picker-item-hover-text-color:  @black-color;
+@combo-box-picker-item-text-color:        #273B4D;
+@combo-box-picker-item-hover-text-color:  #273B4D;
 @combo-box-picker-item-hover-bg:          #e0ecf5;
 @combo-box-picker-item-selected-bg:       @combo-box-picker-item-bg;
 @compo-box-fieldWrapper-margin-right:     3rem;
