https://online.sbis.ru/opendoc.html?guid=e8ce4920-5710-4a2b-827d-17ce1da973a4&des= Ошибка в разработку 18.07.2017 Firefox. Редизайн. Розница Онлайн. Окна "Что распечатать/что сохранить в PDF" меняют свой размер, ес…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -644,7 +644,8 @@
 @data-grid-money-header-cell-padding:     1.43rem;
 @data-grid-results-color:                 #FFCC99;
 // PrintDialog
-@controls-printdialog-min-width:          25rem;
+//По какой-то причине Firefox берёт font-size не из html, а свой, причем только при расчёте этой ширины
+@controls-printdialog-min-width:          25em;
 @controls-printdialog-activate-right:     3.1785rem;
 @controls-printdialog-activate-margin-top:8px;
 //MergeDialog
