--- a/components/FilterPanel/FilterPanel-components/FilterPanelChooser/FilterPanelChooser.List/resources/FilterPanelChooserListFooter.tmpl
+++ b/components/FilterPanel/FilterPanel-components/FilterPanelChooser/FilterPanelChooser.List/resources/FilterPanelChooserListFooter.tmpl
@@ -4,6 +4,6 @@
                             caption="{{ captionFullList }}"
                             command="showFullList"
                             commandArgs="{{ [true] }}"
-                            visible="{{ properties.items.getCount() > 3 }}">
+                            visible="{{ !showFullList && properties.items.getCount() > 3 }}">
     </ws:SBIS3.CONTROLS.Link>
 </div>
